--- a/references.bib
+++ b/references.bib
@@ -236,3 +236,13 @@
   year={2023},
   publisher={SciELO Brasil}
 }
+@article{ferro2012bias,
+  title={A bias-corrected decomposition of the Brier score},
+  author={Ferro, Christopher AT and Fricker, Thomas E},
+  journal={Quarterly Journal of the Royal Meteorological Society},
+  volume={138},
+  number={668},
+  pages={1954--1960},
+  year={2012},
+  publisher={Wiley Online Library}
+}
