--- a/references.bib
+++ b/references.bib
@@ -246,3 +246,23 @@
   year={2012},
   publisher={Wiley Online Library}
 }
+@article{cantor2000determining,
+  title={Determining the area under the ROC curve for a binary diagnostic test},
+  author={Cantor, Scott B and Kattan, Michael W},
+  journal={Medical Decision Making},
+  volume={20},
+  number={4},
+  pages={468--470},
+  year={2000},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+@article{hossin2015review,
+  title={A review on evaluation metrics for data classification evaluations},
+  author={Hossin, Mohammad and Sulaiman, Md Nasir},
+  journal={International journal of data mining \& knowledge management process},
+  volume={5},
+  number={2},
+  pages={1},
+  year={2015},
+  publisher={Academy \& Industry Research Collaboration Center (AIRCC)}
+}
