--- a/indextoslides2.qmd
+++ b/indextoslides2.qmd
@@ -489,6 +489,8 @@ plot(x=data$time,y=data$DEATH_EVENT, main="Time",ylim = c(-.5,1.5))
 
 ## Statistical Modeling
 
+Since the outcome variable (death event) is binary, logistic regression will be used with each of our techniques to fit our models. Two different models will be fit for each technique: one with every predictor variable included (Model 1), and the other using only creatinine phosphokinase and ejection fraction (Model 2), as was advised by [@chicco2020machine]. The goal is to compare how the difference in performance between the two models changes when various cross-validation techniques are applied. The performance of the models will be determined using their MSE and AUC values.
+
 ## 10-fold Cross Validation:
 
 ```{r}
@@ -726,7 +728,7 @@ leave-one-out, and Monte Carlo cross-validation.
 
 While the researchers that provided the dataset found that survival of
 heart attack patients can be predicted using only serum creatinine and
-ejection fraction as predictor variables. The linear regression analysis
+ejection fraction as predictor variables. The logistic regression analysis
 we conducted using various cross-validation techniques has shown that
 the full model (which includes all predictor variables within the
 dataset) has a lower mean squared error (MSE) after testing. This
