--- a/indextoslides2.qmd
+++ b/indextoslides2.qmd
@@ -3,6 +3,7 @@ title: "Cross-Validation - Methods & Importance in Data Science and Statistics"
 author: "Jesse Buntyn, Jolie Wise, Danielle Koche"
 date: '`r Sys.Date()`'
 format: revealjs
+scrollable: true
 css: fontsize.css
 bibliography: references.bib # file contains bibtex for references
 ---
@@ -345,6 +346,8 @@ cross-validation methods and techniques.
 
 Our data description is as follows:
 
+## Data
+
 | **Variable**           | **Type**  | **Characteristic**                    |
 |------------------------|-----------|---------------------------------------|
 | Age                    | Predictor | Integer                               |
@@ -361,7 +364,8 @@ Our data description is as follows:
 | Time                   | Predictor | Integer                               |
 | death_event            | Response  | Binary (1 = death, 0 = no death)      |
 
-```{r, warning=FALSE, echo=T, message=FALSE}
+
+```{r, warning=FALSE, echo=FALSE, message=FALSE}
 # loading packages 
 library(tidyverse)
 library(knitr)
@@ -376,12 +380,12 @@ library(Metrics)
 library(ROCR)
 ```
 
-```{r, warning=FALSE, echo=TRUE}
+```{r, warning=FALSE, echo=FALSE}
 # Load Data
 data <- read.csv('heart_failure_clinical_records_dataset.csv')
 ```
 
-#### Continuous Variables
+## Continuous Variables
 
 ```{r}
 par(mfrow=c(2,4))
@@ -407,7 +411,7 @@ platelets in the patient's blood. The ejection fraction variable is the
 percentage of blood leaving the left ventricle during each contraction
 of the heart [@chicco2020machine].
 
-#### Categorical Variables
+## Categorical Variables
 
 ```{r}
 par(mfrow=c(2,3))
@@ -427,7 +431,7 @@ variable indicates whether the patient is a female ('0') or male ('1').
 Our target variable, death event, indicates whether the patient died
 before the end of the follow-up period.
 
-#### Missing Values
+## Missing Values
 
 ```{r}
 colSums(is.na(data)) #total missing values per column
@@ -437,7 +441,7 @@ We found the total number of missing values for each variable, and none
 were found. The analysis can continue without deleting rows or
 imputation of values.
 
-#### Checking for Outliers
+## Checking for Outliers
 
 ```{r}
 #Boxplots to look for outliers
@@ -462,7 +466,7 @@ unrealistic age. The outliers in the boxplots appear to be genuine
 observations and should be considered in our model. The original article
 also did not remove any outliers [@chicco2020machine.]
 
-#### Correlation
+## Correlation
 
 The majority of the variables do not appear to have a significant
 correlation to the other. The most significant was between the time
@@ -476,20 +480,11 @@ patients.
 ```{r}
 cor(data) %>%
   corrplot(method = 'ellipse', type = 'upper')
-
-par(mfrow=c(2,4))
-plot(x=data$age,y=data$DEATH_EVENT, main="Age", ylim = c(-.5,1.5))
-plot(x=data$creatinine_phosphokinase,y=data$DEATH_EVENT, main="Creatinine Phosphokinase",ylim = c(-.5,1.5))
-plot(x=data$ejection_fraction,y=data$DEATH_EVENT, main="Ejection Fraction",ylim = c(-.5,1.5))
-plot(x=data$platelets,y=data$DEATH_EVENT, main="Platelets",ylim = c(-.5,1.5))
-plot(x=data$serum_creatinine,y=data$DEATH_EVENT, main="Serum Creatinine",ylim = c(-.5,1.5))
-plot(x=data$serum_sodium,y=data$DEATH_EVENT, main="Serum Sodium",ylim = c(-.5,1.5))
-plot(x=data$time,y=data$DEATH_EVENT, main="Time",ylim = c(-.5,1.5))
 ```
 
 ## Statistical Modeling
 
-Since the outcome variable (death event) is binary, logistic regression will be used with each of our techniques to fit our models. Two different models will be fit for each technique: one with every predictor variable included (Model 1), and the other using only creatinine phosphokinase and ejection fraction (Model 2), as was advised by [@chicco2020machine]. The goal is to compare how the difference in performance between the two models changes when various cross-validation techniques are applied. The performance of the models will be determined using their MSE and AUC values.
+Since the outcome variable (death event) is binary, logistic regression will be used with each of our techniques to fit our models. Two different models will be fit for each technique: one with every predictor variable included (Model 1), and the other using only serum creatinine and ejection fraction (Model 2), as was advised by [@chicco2020machine]. The goal is to compare how the difference in performance between the two models changes when various cross-validation techniques are applied. The performance of the models will be determined using their MSE and AUC values.
 
 ## 10-fold Cross Validation:
 
@@ -608,7 +603,7 @@ validation_SHO <- validation_SHO %>%
          sqerr_m2_SHO = (yhat_m2_SHO - DEATH_EVENT)^2) %>%
   relocate(obs, DEATH_EVENT, yhat_m1_SHO, sqerr_m1_SHO, yhat_m2_SHO, sqerr_m2_SHO)
 
-head(validation_SHO)
+#head(validation_SHO)
 
 SHO_m1_mse <- mean(validation_SHO$sqerr_m1_SHO, na.rm = TRUE)
 SHO_m2_mse <- mean(validation_SHO$sqerr_m2_SHO, na.rm = TRUE)
@@ -659,7 +654,7 @@ loocv_tibble
 
 Leave-One-Out cross-validation (LOOCV) follows a similar data set
 splitting technique, but in this case, the data is split k-ways, where k
-is equal to the number of data points. According to LOOCV, the full
+is equal to the number of data points. In this case, k would be 299. According to LOOCV, the full
 model (which includes all predictor variables) is a better fit due to a
 lower mean squared error compared to the reduced model (which only
 includes serum creatinine and ejection fraction).
